--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,11 @@ source:
       - patches/0005-chromium-avoid-using-macos-12-13-14-symbols.patch
       - patches/0006-chromium-added-missing-headers.patch
       - patches/0007-chromium-disable-glib-usage-for-linux-aarch64.patch
+      - patches/0008-chromium-fix-readelf-path.patch
 
 build:
   number: 0
-  skip: True  # [ppc64le or s390x]
+  skip: True  # [ppc64le or s390x or not (linux and aarch64)]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
   ignore_run_exports:
