--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [ppc64le or s390x or not (linux and aarch64)]
+  skip: True  # [not (linux and aarch64)]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
   ignore_run_exports:
