--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,12 @@ source:
       - patches/0006-chromium-added-missing-headers.patch
       - patches/0007-chromium-disable-glib-usage-for-linux-aarch64.patch
       - patches/0008-chromium-fix-readelf-path.patch
+      - patches/0009-chromium-work-around-msvc-17.10-bug.patch
 
 build:
   number: 0
   skip: True  # [ppc64le or s390x]
-  skip: True  # [not linux]
+  skip: True
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
   ignore_run_exports:
@@ -79,10 +80,13 @@ requirements:
     - m2-bison    # [win]
     - m2-flex     # [win]
     - m2-gperf    # [win]
+    - patch       # [unix]
+    - m2-patch    # [win]
     - cmake
     - ninja
     - perl
     - nodejs
+    - html5lib
 
   host:
     - qtbase {{ version }}
