--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,11 @@ source:
       - patches/0007-chromium-disable-glib-usage-for-linux-aarch64.patch
       - patches/0008-chromium-fix-readelf-path.patch
       - patches/0009-chromium-work-around-msvc-17.10-bug.patch
-      - patches/0010-chromium-disable-v4l2-vaapi.patch
 
 build:
   number: 0
   skip: True  # [ppc64le or s390x]
-  skip: True  # [not linux]
+  skip: True  # [not win]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
   ignore_run_exports:
