Added patch to fix Windows builds

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,11 +19,12 @@ source:
       - patches/0007-chromium-disable-glib-usage-for-linux-aarch64.patch
       - patches/0008-chromium-fix-readelf-path.patch
       - patches/0009-chromium-work-around-msvc-17.10-bug.patch
+      # https://github.com/carsten-grimm-at-ipolog/vcpkg/blob/master/ports/qtwebengine/add-include-string.patch
+      - patches/0010-gn-add-include-string.patch  # [win]
 
 build:
   number: 0
   skip: True  # [ppc64le or s390x]
-  skip: True  # [not win]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
   ignore_run_exports:
@@ -80,8 +81,8 @@ requirements:
     - m2-bison    # [win]
     - m2-flex     # [win]
     - m2-gperf    # [win]
-    - patch       # [unix]
     - m2-patch    # [win]
+    - patch       # [unix]
     - cmake
     - ninja
     - perl
