--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,4 @@
+# Need newer OSX SDK for proper AVFAudio/AVFAudio.h pathing.
 MACOSX_SDK_VERSION:
   - '11.3'                                                   # [osx]
 CONDA_BUILD_SYSROOT:
